[package]
name = "backend-auth"
version = "0.1.0"
authors = ["UnicodingUnicorn <7555ic@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
lazy_static = "1.2.0"
iron = "0.6.0"
router = "0.6.0"
jsonwebtoken = "5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_qs = "0.4.5"
urlencoded = "0.6.0"
